--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\zjplab\\Miniconda3\\envs\\torch\\python.exe"
+    "python.pythonPath": "C:\\Users\\zjplab\\Miniconda3\\python.exe"
 }
